# gnucap

./: .gitignore  .gitmodules  AUTHORS  BUGS  CHANGES  CHANGES.fucap  CHANGES.uf  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  README  TODO  annotated.html  autogen.sh  classes.html  config.h.in  configure  configure.ac  files.html  functions.html  functions_0x61.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x68.html  functions_0x69.html  functions_0x6a.html  functions_0x6b.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x71.html  functions_0x72.html  (+151 more)
adms/: INSTALL  Makefile.am  NOTES  README  admst_htm.xml  admst_show_data.xml  bjt_ch.gc  gnucap-adms  gnucap.xml.in  some_analog_functions.xml  split.py
adms/Input/: ngspice1.xml
adms/convert_symb/: Makefile  convert.cc
adms/hicum0/: hicum0.va  wrapper.h
adms/ota/: ota.va
adms/rtest/: rtest.va  wrapper.h
d0/d02/: classanonymous__namespace_02bm__sffm_8cc_03_1_1_e_v_a_l___b_m___s_f_f_m-members.html
d0/d03/: class_t_d_p___b_u_i_l_t___i_n___d_i_o_d_e.html  m__wave_8h.html  m__wave_8h_source.html
d0/d0a/: class_s_d_p___b_u_i_l_t___i_n___m_o_s6-members.html
d0/d0b/: class_t_d_p___b_u_i_l_t___i_n___m_o_s1.html  class_t_d_p___b_u_i_l_t___i_n___m_o_s7-members.html
d0/d0d/: classanonymous__namespace_02bm__generator_8cc_03_1_1_e_v_a_l___b_m___g_e_n_e_r_a_t_o_r-members.html
d0/d10/: classanonymous__namespace_02measure__eval_8cc_03_1_1_m_e_a_s_u_r_e-members.html
d0/d1f/: class_c_a_r_d_s_t_a_s_h.html
d0/d21/: classanonymous__namespace_02c__sweep_8cc_03_1_1_c_m_d___s_w_e_e_p-members.html
d0/d26/: class_d_e_v___s_p_i_c_e-members.html
d0/d2b/: class_e_v_a_l___b_m___a_c_t_i_o_n___b_a_s_e-members.html
d0/d2d/: classanonymous__namespace_02func__core_8cc_03_1_1cos-members.html
d0/d2e/: classanonymous__namespace_02d__switch_8cc_03_1_1_d_e_v___c_s_w_i_t_c_h.html
d0/d2f/: class_m_o_d_e_l___b_u_i_l_t___i_n___m_o_s5-members.html
d0/d34/: class_quoted___string.html  classanonymous__namespace_02c__file_8cc_03_1_1_c_m_d___l_o_g.html
d0/d3e/: class_token___u_n_a_r_y-members.html
d0/d46/: classanonymous__namespace_02lang__geda_8cc_03_1_1_c_m_d___g_s_c_h_e_m.html
d0/d4b/: m__base__math_8cc.html  m__base__math_8cc_source.html
d0/d4c/: classanonymous__namespace_02lang__spice_8cc_03_1_1_c_m_d___b_u_i_l_d.html  classanonymous__namespace_02lang__verilog_8cc_03_1_1_c_m_d___p_a_r_a_m_s_e_t-members.html
d0/d5e/: class_l_o_g_i_c___n_o_r-members.html  classanonymous__namespace_02bm__cond_8cc_03_1_1_e_v_a_l___b_m___c_o_n_d-members.html  classanonymous__namespace_02lang__verilog_8cc_03_1_1_c_m_d___p_a_r_a_m_s_e_t.html
d0/d5f/: namespace_m_o_d_e_l___b_u_i_l_t___i_n___m_o_s6___d_i_s_p_a_t_c_h_e_r.html
d0/d63/: classanonymous__namespace_02c__system_8cc_03_1_1_c_m_d___s_y_s_t_e_m.html
d0/d67/: classanonymous__namespace_02c__modify_8cc_03_1_1_c_m_d___u_n_f_a_u_l_t-members.html
d0/d84/: c__exp_8cc.html  c__exp_8cc_source.html
d0/d8a/: s__tr_8h.html  (+1 more)
doc/: Makefile  Makefile.in
examples/: Makefile.am  Makefile.in  VCbug.sim  Xprobes.gc  Xprobes.sim  ac_lp.gc  adms_1st_dc.gc  adms_ac.gc  adms_ctest.gc  adms_hic_ac.gc  adms_hic_diode.gc  adms_hicum0.gc  adms_opamp.gc  adms_opamp_ramp.gc  adms_ota.gc  bjt_ch.gc  branchvs.gc  crc.sim  crcr.sim  d_opamp.gc  ddc-simple.gc  ddc_ex2.gc  ddc_unit.gc  ddc_vrc.gc  hic0_bench.sim  hic0_bug.gc  hic0_ok.gc  hic3.gc  hicum0.gc  hicum0.sim  ivl_invert.gc  lp_vf.sim  mstat.ckt  mstat.gc  mstat_comp.gc  mstat_forward.gc  mstat_tree.gc  nodeset.gc  noise_test.gc  opamp.gc  (+14 more)
gnucap/: Makefile.in  aclocal.m4  configure  configure.ac
gnucap-icarus/: INSTALL  Makefile.am  TODO  configure.ac
gnucap-python/: README  config.h  gnucap.cc  gnucap_wrap.h  numpy_interface.h
modelgen/: Makefile.am  Makefile.in  ap.h  ap_construct.cc  ap_convert.cc  ap_get.cc  ap_match.cc  ap_skip.cc  io.cc  io_.h  io_error.h  io_out.cc  io_trace.h  l_lib.h  l_trim.cc  md.h  mg_.h  mg_error.cc  mg_in.cc  mg_main.cc  mg_out.h  mg_out_common.cc  mg_out_dev.cc  mg_out_dump.cc  mg_out_h.cc  mg_out_lib.cc  mg_out_model.cc  mg_out_root.cc  mode.h  u_opt.h  u_opt1.cc
models-bsim/: Makefile
modules/: Makefile.am  d_bti_inf.cc  d_rcd_exp.cc  d_rcd_sym.cc  d_rcd_sym.h  d_rcd_sym_v2.cc  d_rcd_sym_v2.h  d_rcd_sym_v3.cc  d_rcd_sym_v3.h  d_rcd_sym_v4.cc
non-GPL/: Makefile.am  Makefile.am.empty  d_bti_inf.cc  d_bti_inf.h  d_rcd_sym.cc  d_rcd_sym.h  d_rcd_sym_v2.cc  d_rcd_sym_v2.h  d_rcd_sym_v3.cc  d_rcd_sym_v3.h  d_rcd_sym_v4.cc
non-GPL.skel/: Makefile
non-GPL/tests/: Makefile  bti.ckt  bti_matrix_tw.sim  bti_single_compare.sim  bti_single_tw.sim  bti_sweep_tol.sim  bti_sweep_tw.sim  mos_level1_tr.sim  mos_level1_tw.sim  mos_level8_tr.sim  mos_level8_tw.sim  non-GPL.inc  rcd_cons_tw.sim  rcd_tw.sim  rcd_v3_tw.sim
search/: all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6a.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_78.js  all_79.js  all_7a.js  classes_61.js  classes_62.js  classes_63.js  classes_64.js  classes_65.js  classes_66.js  classes_69.js  classes_6a.js  classes_6c.js  classes_6d.js  classes_6e.js  classes_6f.js  classes_70.js  (+135 more)
src/: Makefile.am  Makefile.in  ap.h  ap_construct.cc  ap_convert.cc  ap_error.cc  ap_get.cc  ap_skip.cc  array.h  bm.cc  bm.h  bm_complex.cc  bm_cond.cc  bm_exp.cc  bm_fit.cc  bm_generator.cc  bm_model.cc  bm_noise.cc  bm_poly.cc  bm_posy.cc  bm_pulse.cc  bm_pwl.cc  bm_sffm.cc  bm_sin.cc  bm_tanh.cc  bm_value.cc  bmm_filter.cc  bmm_semi.cc  bmm_table.cc  c__cmd.cc  c_attach.cc  c_clear.cc  c_comand.cc  c_comand.h  c_debug.cc  c_delete.cc  c_exp.cc  c_file.cc  c_for.cc  c_genrat.cc  (+270 more)
tests/: LogicAND.gc  LogicAND.out  LogicAND.sp  Makefile  gc2gp  rcd_cons_tw.sim  rcd_cons_tw_more.sim  rcd_tr.sim  rcd_tw.sim  saveload.sim  sweep.sim
(+2006 files in other folders)
